ingress-and-services/cluster-ip.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-app-service-cluster-ip
spec:
  selector:
    app: my-app
  ports:
  - port: 80
    targetPort: 80
  type: ClusterIP
