ingress-and-services/loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-app-service-load-balancer # локально не сработает, только в облаках
spec:
  selector:
    app: my-app
  ports:
  - port: 80
    targetPort: 80
  type: LoadBalancer
