ingress-and-services/node-port.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-app-service-nodeport
spec:
  selector:
    app: my-app
  ports:
  - port: 80
    targetPort: 80
  type: NodePort
